correcion fondo y boton copiar

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <script src="https://kit.fontawesome.com/8c8c83e1d6.js" crossorigin="anonymous"></script>
 
 <body>
-    <div class="fondo"></div>
+    <!-- <div class="fondo"></div> -->
     <section class="encrip">
         <header class="logo">
             <div class="img-logo">
                 <h1>encriptador</h1>
-                <p>Reto encriptador por ORACLE</p>
+                <p>Encriptador de texto - Alura Challenges ONE</p>
             </div>
             <!-- <div class="contacto">
                     <p class="creditos">Desarrolado por Eduardo</p>
@@ -61,7 +61,7 @@
                             <i class="fa-solid fa-circle-exclamation"></i>
                             <p>Texto encriptado</p>
                         </div>
-                        <button class="button-desencriptar-text" type="button" id="Boton-Copiar">Copiar
+                        <button class="button-desencriptar-text" type="button" id="CopiarTexto" onclick="CopiarTexto()">Copiar
                             Texto</button>
                     </div>
                 </div>
